# swe2

./: README.md  pyproject.toml
.github/workflows/: ci.yml
swe2/: calculator.py  main.py
tests/: test_calculator.py
