[tool.poetry]
name = "swe2"
version = "0.1.0"
description = ""
authors = ["Mostafa Kassem <elkasem2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
